Assets: Clear Asset does not immediately redraw the outliner #105216

Closed
opened 2023-02-26 11:11:42 +07:00 by Colin Basnett · 1 comments

System Information
Operating system: Windows 11
Graphics card: NVIDIA RTX 3060 Ti

Blender Version
Broken: 3.6.0-alpha

Short description of error

The "Clear Asset" operator does not immediately update the outliner. This allows a stale asset icon to be displayed next to the object that has just had its asset data cleared. The problem eventually fixes itself when the outliner is forced to draw by some other means.

2023-02-26 02-05-56.mp4

Exact steps for others to reproduce the error

  1. Link an asset to the scene from an asset library.
  2. "Make Local" the newly linked object.
  3. Run "Clear Asset".
  4. Observe that the object still has the asset icon next to its name in the outliner.
  5. Mousing in and out of the outliner will force a redraw.
**System Information** Operating system: Windows 11 Graphics card: NVIDIA RTX 3060 Ti **Blender Version** Broken: 3.6.0-alpha **Short description of error** The "Clear Asset" operator does not immediately update the outliner. This allows a stale asset icon to be displayed next to the object that has just had its asset data cleared. The problem eventually fixes itself when the outliner is forced to draw by some other means. [2023-02-26 02-05-56.mp4](/attachments/52c0ca8d-67f6-424b-9b76-0c6d9ba4b75b) **Exact steps for others to reproduce the error** 1. Link an asset to the scene from an asset library. 2. "Make Local" the newly linked object. 3. Run "Clear Asset". 4. Observe that the object still has the asset icon next to its name in the outliner. 5. Mousing in and out of the outliner will force a redraw.
Jesse Yurkovich added
Module
Pipeline, Assets & IO
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-02-28 08:43:34 +07:00

Got a fix, will post PR shortly

Got a fix, will post PR shortly
Philipp Oeser self-assigned this 2023-02-28 09:59:24 +07:00
Philipp Oeser removed the
Interest
Pipeline, Assets & IO
label 2023-02-28 10:10:31 +07:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-03-17 11:55:18 +07:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#105216
There is no content yet.