Fix #105216: Clear Asset does not immediately redraw the outliner

While **marking** an asset would update the Outliner immediately (this
due to the fact that `ED_asset_generate_preview` indirectly took care of
a refresh), **clearing** an asset would not do this.

Now be explicit about this in the Outliner listener and consider asset
notifiers there.

Pull Request: https://projects.blender.org/blender/blender/pulls/105287